--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
 
     </header>
     <main>
+        <div class="main-img">
+        <img src="new-year-new-me-main/images/person.png" alt="">
+    </div>
+        <div class="maintext">
+            <h1>My failures of previous year </h1>
+            <h3 class="maintext2">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</h3>
+        <li>
+            <ul>Contrary to popular belief, is not simply</ul>
+            <ul>Contrary to popular belief.</ul>
+            <ul>Contrary to popular , is not simply.</ul>
+            <ul>Contrary to popular belief, is not simply.</ul>
+            <ul>Contrary to popular simply.</ul>
+
+
+        </li>
+    </div>
 
     </main>
     <footer>
